0027622: Data Exchange - STL file having less than 4 triangles cannot be read

Drop minimum file size check from RWStl::ReadBinary().

Test case for issue #27622